# tachyon

./: .gitignore  CMakeLists.txt  COPYING  README.md  gen1.c  gen1.h  main.c
src/: base.cxx  base.h  gen-gb-private.h  gen-gb.cxx  gen-gb.h  gen1-private.h  gen1.cxx  gen1.h  gen2-private.h  gen2.cxx  gen2.h  gen3-private.h  gen3.cxx  gen3.h  main.cxx  util.h
src/common/: Bitstream.cxx  Bitstream.h  GBGroup.h  GBPartyPokemon.h  GBPokemon.h  Game.cxx  Game.h  GameBoyGame.cxx  GameBoyGame.h  GenericPokemonSpecies.h  Group.h  Move.cxx  Move.h  MultipaletteSprite.cxx  MultipaletteSprite.h  Palette.cxx  Palette.h  Pokemon.cxx  Pokemon.h  PokemonSpecies.cxx  PokemonSpecies.h  Sprite.cxx  Sprite.h  Type.cxx  Type.h
src/gb/: GBGroup.h  GBPartyPokemon.h  GBPokemon.h  GameBoyGame.cxx  GameBoyGame.h
src/gen1/: G1BasePokemon.cxx  G1BasePokemon.h  G1Box.cxx  G1Box.h  G1Party.cxx  G1Party.h  G1PartyPokemon.cxx  G1PartyPokemon.h  G1PokemonSpecies.cxx  G1PokemonSpecies.h  G1SpriteDecompressor.cxx  G1SpriteDecompressor.h  Generation1.cxx  Generation1.h
src/gen2/: G2BasePokemon.h  G2Box.cxx  G2Box.h  G2Party.cxx  G2Party.h  G2PartyPokemon.h  G2PokemonSpecies.cxx  G2PokemonSpecies.h  Generation2.cxx  Generation2.h
src/gen3/: G3BasePokemon.cxx  G3BasePokemon.h  G3Box.cxx  G3Box.h  G3Party.cxx  G3Party.h  G3PartyPokemon.cxx  G3PartyPokemon.h  G3PokemonSpecies.cxx  G3PokemonSpecies.h  Generation3.cxx  Generation3.h
src/qt/: CMakeLists.txt  Cartridge.cxx  Cartridge.h  GameRegistry.cxx  GameRegistry.h  GameRegistryView.cxx  GameRegistryView.h  GameRegistryView.ui  GroupList.cxx  GroupList.h  Info.plist.in  PokemonList.cxx  PokemonList.h  PokemonSelector.cxx  PokemonSelector.h  PokemonStatus.cxx  PokemonStatus.h  PokemonStatus.ui  PokemonTable.cpp  PokemonTable.cxx  PokemonTable.h  SpriteUtilities.cxx  SpriteUtilities.h  main.cpp  main.cxx
src/util/: Bitstream.cxx
